# dave

./: .clang-tidy  .clangd  .gdbinit  .gitattributes  .gitignore  .gitmodules  .lldbinit  .pdbrc  CHANGELOG.md  CMakeLists.txt  DEV_GUIDE.md  MANUAL_INSTALLATION.md  README.md  USER_GUIDE.md  gave_gdb_init.py  lldb_init.py  setup.py
.github/workflows/: tests.yml
dave/: __init__.py  __main__.py  container_factory.py  future_gdb.py  gui.py  process.py  singleton.py  views.py
dave/assets/: .gdbinit  .lldbinit  dave  dave_install.sh  lldb_init.py
dave/client/: __init__.py  __main__.py  audio_views.py  audio_views_tab.py  container_model.py  global_settings.py  gui.py  gui_new.py  in_scope_dict.py  raw_to_numpy.py  settings_tab.py  settings_tab_new.py  side_panel.py  side_panel_new.py  tooltip.py  view_setting.py  views.py  views_tab.py  views_tab_new.py
dave/client/container/: __init__.py  colors.py  container_model.py  container_settings_frames.py  container_settings_frames_new.py  container_side_panel_info.py  container_views.py  container_views_new.py  raw_to_numpy.py
dave/client/entity/: __init__.py  entity_model.py  entity_settings_frame.py  entity_side_panel_info.py  entity_view.py  model_factory.py  raw_to_numpy.py
dave/client/iir/: __init__.py  iir_model.py  iir_settings_frame.py  iir_settings_frame_new.py  iir_side_panel_info.py  iir_views.py  iir_views_new.py  raw_to_numpy.py
dave/common/: data_layout.py  logger.py  override.py  raw_container.py  raw_entity.py  raw_iir.py  sample_type.py  server_type.py
dave/debuggers/: value.py
dave/debuggers/gdb/: __init__.py  commands.py
dave/debuggers/lldb/: commands.py
dave/debuggers/pdb/: value.py
dave/languages/c_cpp/: __init__.py  juce.py  std_1D.py  std_2D.py  std_base.py  template_parser.py
dave/languages/python/: numpy_2D.py
dave/server/: container.py  container_factory.py  entity.py  entity_factory.py  iir.py  language_type.py  process.py
dave/server/debuggers/: command_parsers.py  value.py
dave/server/debuggers/gdb/: __init__.py  commands.py  value.py
dave/server/debuggers/gdb_/: __init__.py  commands.py  formatters.py  value.py
dave/server/debuggers/lldb/: __init__.py  commands.py  value.py
dave/server/debuggers/lldb_/: __init__.py  commands.py  formatters.py  value.py
dave/server/debuggers/pdb/: __init__.py  commands.py
dave/server/languages/: __init__.py
dave/server/languages/c_cpp/: __init__.py  choc.py  hart.py  juce.py  std_1D.py  std_2D.py  std_base.py  template_parser.py
dave/server/languages/python/: numpy_2D.py
dave/server/languages/rust/: std_1D.py  std_2D.py  std_base.py
examples/: CMakeLists.txt  choc.cpp  clion_bug.cpp  cpp_tools_bug.cpp  custom_containers.cpp  gsl.cpp  hart.cpp  juce.cpp  np.py  std.cpp
examples/c_cpp/: CMakeLists.txt  c_example.c  cpp_scope.cpp  custom_containers.cpp  custom_containers.hpp  custom_tests.cpp  hart.cpp  hart_tests.cpp  juce.cpp  juce_tests.cpp  numerics.hpp  std.cpp  std_tests.cpp  test_utils.hpp
examples/custom/: __init__.py  example.py
examples/custom_containers/: __init__.py  example.py
examples/rust/: Cargo.toml
gave/: __init__.py  __main__.py  buffer.py  buffer_1D.py  buffer_dispatcher.py  commands.py  container.py  container_1D.py  container_2D.py  container_factory.py  container_model.py  data_layout.py  data_model.py  gave.py  gui.py  process.py  tooltip.py  views.py
gave/assets/: .gdbinit  .lldbinit  lldb_init.py
gave/debuggers/: value.py
gave/debuggers/gdb/: __init__.py  commands.py  value.py
gave/debuggers/lldb/: __init__.py  commands.py  value.py
gave/debuggers/pdb/: __init__.py  commands.py
gave/languages/c_cpp/: std_1D.py  std_2D.py
gave/languages/python/: __init__.py  numpy_2D.py
tests/server/common/: __init__.py  binary_dirs.py  debugger.py  test_case.py
tests/server/gdb_testing/: __init__.py  debugger.py  run_tests.py  test_case.py
tests/server/lldb_testing/: __init__.py  debugger.py  run_tests.py  test_case.py
tests/server/mocked/: __init__.py  client.py
tests/server/test_suite/: run_tests.py  test_commands.py  test_container_pretty_printers.py  test_cpp_gsl.py  test_cpp_hart.py  test_cpp_juce.py  test_cpp_numerics.py  test_cpp_std.py  test_rust_std.py  test_scope.py
